Added test_utils.py. Rearranged utils.py. Comments.

--- a/ipynb/Usage guide.ipynb
+++ b/ipynb/Usage guide.ipynb
@@ -66,14 +66,12 @@
     "# Add path to files for solving the n=5 system exactly. This is included as an example for the package, but you can create your own by using the exact module.\n",
     "# To create ising_eqn_5_sym.py, run in the shell\n",
     "# >>> python exact.py 5 1\n",
-    "import sys\n",
-    "sys.path.append('../ising_eqn')\n",
-    "import ising_eqn_5_sym"
+    "from coniii.ising_eqn import ising_eqn_5_sym"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +88,13 @@
     "\n",
     "allstates = bin_states(n,True)  # all 2^n possible binary states in {-1,1} basis\n",
     "sample = allstates[random.choice(range(2**n),size=100,replace=True,p=p)]  # random sample from p(s)\n",
-    "sisj = pair_corr(sample,concat=True)  # magnetizations and pairwise correlations of random sample"
+    "sisj = pair_corr(sample,concat=True)  # magnetizations and pairwise correlations of random sample\n",
+    "\n",
+    "def error_on_correlations(estSisj):\n",
+    "    return np.linalg.norm( sisj - estSisj )\n",
+    "\n",
+    "def error_on_multipliers(estMultipliers):\n",
+    "    return np.linalg.norm( hJ - estMultipliers )"
    ]
   },
   {
@@ -115,9 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error on multipliers: 1.354622E-08\n",
+      "Error on sample corr: 4.023216E-01\n"
+     ]
+    }
+   ],
    "source": [
     "# Define function specifically needed for creating Exact class.\n",
     "def calc_observables_multipliers(J):\n",
@@ -132,7 +145,11 @@
     "solver = Exact(n,\n",
     "               calc_observables_multipliers=calc_observables_multipliers,\n",
     "               calc_observables=calc_observables)\n",
-    "estMultipliers,soln = solver.solve(constraints=sisjTrue,fsolve_kwargs={})"
+    "estMultipliers,soln = solver.solve(constraints=sisjTrue,fsolve_kwargs={})\n",
+    "\n",
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
@@ -183,7 +200,11 @@
     "# Declare and call solver.\n",
     "# adj() was imported from coniii.utils at the beginning. It is a function for finding all the neighbors of a given state and is necessary for the MPF algorithm (called g_ij in Sohl-Dickstein 2011).\n",
     "solver = MPF(n,calc_observables=calc_observables,adj=adj)\n",
-    "estMultipliers,soln = solver.solve(sample)"
+    "estMultipliers,soln = solver.solve(sample)\n",
+    "\n",
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
@@ -245,7 +266,11 @@
     "solver = Pseudo(n,calc_observables=calc_observables,\n",
     "                calc_observables_r=calc_observables_r,\n",
     "                get_multipliers_r=get_multipliers_r)\n",
-    "estMultipliers = solver.solve(sample,zeros(15))"
+    "estMultipliers = solver.solve(sample,zeros(15))\n",
+    "\n",
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
@@ -308,7 +333,11 @@
     "solver = ClusterExpansion(n,calc_observables=calc_observables)\n",
     "\n",
     "threshold = 0.001\n",
-    "estMultipliers = solver.solve(sample,threshold)"
+    "estMultipliers = solver.solve(sample,threshold)\n",
+    "\n",
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
@@ -384,7 +413,11 @@
     "        return {'maxdlamda':.05,'eta':.05}\n",
     "\n",
     "# Run solver.\n",
-    "estMultipliers = solver.solve(sisj,maxiter=40,custom_convergence_f=learn_settings)"
+    "estMultipliers = solver.solve(sisj,maxiter=40,custom_convergence_f=learn_settings)\n",
+    "\n",
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
@@ -444,8 +477,11 @@
     "# TO DO : Is symmetrizing J (in at least two places) being done correctly?\n",
     "\n",
     "solver = RegularizedMeanField(n,calc_observables=calc_observables)\n",
+    "estMultipliers = solver.solve(sample,numSamples=100)\n",
     "\n",
-    "estMultipliers = solver.solve(sample,numSamples=100)"
+    "print \"Error on multipliers: %E\"%error_on_multipliers(estMultipliers)\n",
+    "print \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers))"
    ]
   },
   {
