Bug in renaming Exact to Enumerate

--- a/ipynb/Usage guide.ipynb
+++ b/ipynb/Usage guide.ipynb
@@ -66,15 +66,8 @@
     "# Add path to files for solving the n=5 system exactly. This is included as an example for the package, but you can create your own by using the exact module.\n",
     "# To create ising_eqn_5_sym.py, run in the shell\n",
     "# >>> python exact.py 5 1\n",
-    "from coniii.ising_eqn import ising_eqn_5_sym"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from coniii.ising_eqn import ising_eqn_5_sym\n",
+    "\n",
     "# Define common functions.\n",
     "calc_e,calc_observables,mchApproximation = define_ising_helpers_functions()\n",
     "\n",
@@ -142,7 +135,7 @@
     "    return pair_corr( allstates, np.exp(-E-logsumexp(-E)),concat=True )\n",
     "\n",
     "# Declare and call solver.\n",
-    "solver = Exact(n,\n",
+    "solver = Enumerate(n,\n",
     "               calc_observables_multipliers=calc_observables_multipliers,\n",
     "               calc_observables=calc_observables)\n",
     "estMultipliers,soln = solver.solve(constraints=sisjTrue,fsolve_kwargs={})\n",
