Bug in bin_states

--- a/ipynb/Usage guide.ipynb
+++ b/ipynb/Usage guide.ipynb
@@ -71,7 +71,7 @@
     "# Define common functions.\n",
     "calc_e,calc_observables,mchApproximation = define_ising_helpers_functions()\n",
     "\n",
-    "# Generate example data set.\n",
+    "# Generate example data set. Seed is set to 0\n",
     "n = 5  # system size\n",
     "np.random.seed(0)\n",
     "h,J = np.random.normal(scale=.1,size=n),np.random.normal(scale=.1,size=n*(n-1)//2)  # random fields, couplings\n",
