--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -271,7 +271,7 @@ non-interacting case ($\gamma \rightarrow \infty$) and the naively calculated
 mean-field solution \eqref{meanFieldSolution} ($\gamma \rightarrow 0$).
 While there is no guarantee that varying this one parameter will produce solutions that are
 good enough to ``fit within error bars,'' this approach has been successful in at least
-one case of fitting social interactions \cite{DanKraFla17}.
+one case of fitting social interactions \cite{Daniels:1cq}.
 
 This is implemented in {\tt RegularizedMeanField}.
 
@@ -323,7 +323,7 @@ In some parameter regimes, where spins are tightly correlated, the Metropolis al
 \section{Model fitting}
 A fundamental problem in model inference is that uncertainty coming
 from the finiteness of data translates into uncertainties in parameters.
-In the exposition of the maxent formulation in Eqns ??, there is no fitting of the model parameters because they are given by the data once the constraints are specified. In reality, constraints are typically estimated from a finite sample, and they are noisy.
+In the exposition of the maxent formulation derived from Eq~\ref{eq:Lagrang}, there is no fitting of the model parameters because they are given by the data once the constraints are specified. In reality, constraints are typically estimated from a finite sample, and they are noisy.
 The straightforward answer to this problem is to take more data---in a pairwise
 maximum entropy problem, we might insist that we have enough samples to well-constrain
 the correlation between every pair of individuals.  But it is not always possible
@@ -367,7 +367,7 @@ Choosing which constraints to impose is an important question. Typically, the ap
 
 
 
-\subsection{Conclusion}
+\section{Conclusion}
 Science is a process of model selection. In the ideal picture, we start with the simplest models and the fewest constraints possible, and then we increase the complexity of the model til it is sufficiently so to make good predictions. In principle, we could add as many contraints as would allow us to fit the data well, but the idea is that complex models are not only ``expensive'' but they do not generalize well.
 Maxent is a principled framework for this picture of model building. The number of parameters and the order of the constraints we impose can be adjusted to test our hypotheses about what matters for the system.
 In this sense, the maxent approach is a useful ``model'' framework for thinking about statistical inference problems far beyond statistical physics. We build an open-source Python package that we hope will be accessible and useful for those unfamiliar with maxent approaches to experiment and perhaps apply this technique to their questions.
