add CocMon12 and BarCoc13 refs

--- a/guide/refs.bib
+++ b/guide/refs.bib
@@ -1,6 +1,37 @@
 %% Created using Papers on Sun, 13 Aug 2017.
 %% http://papersapp.com/papers/
 
+@article{BarCoc13,
+Author = {Barton, John and Cocco, Simona},
+Date-Added = {2018-01-02 22:27:21 +0000},
+Date-Modified = {2018-01-02 22:27:26 +0000},
+Doi = {10.1088/1742-5468/2013/03/P03002},
+Issn = {1742-5468},
+Journal = {Journal of Statistical Mechanics: Theory and Experiment},
+Mendeley-Groups = {Ising models},
+Month = {mar},
+Number = {03},
+Pages = {P03002},
+Title = {{Ising models for neural activity inferred via selective cluster expansion: structural and coding properties}},
+Url = {http://stacks.iop.org/1742-5468/2013/i=03/a=P03002?key=crossref.b793af40de7f98b1085b367fa334bbf4},
+Volume = {2013},
+Year = {2013},
+Bdsk-Url-1 = {http://stacks.iop.org/1742-5468/2013/i=03/a=P03002?key=crossref.b793af40de7f98b1085b367fa334bbf4},
+Bdsk-Url-2 = {https://dx.doi.org/10.1088/1742-5468/2013/03/P03002}}
+
+@article{CocMon12,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1110.5416v1},
+Author = {Cocco, S and Monasson, R},
+Date-Added = {2018-01-02 22:26:53 +0000},
+Date-Modified = {2018-01-02 22:31:14 +0000},
+Eprint = {arXiv:1110.5416v1},
+File = {:Users/bdaniels/Library/Application Support/Mendeley Desktop/Downloaded/Cocco, Monasson - 2012 - Adaptive cluster expansion for the inverse Ising problem convergence, algorithm and tests.pdf:pdf},
+Journal = {Journal of Statistical Physics},
+Pages = {1--57},
+Title = {{Adaptive cluster expansion for the inverse Ising problem: convergence, algorithm and tests}},
+Year = {2012}}
+
 @article{Schneidman:2006he,
 author = {Schneidman, E and Berry, M J and {RS II} and Bialek, W},
 title = {{Weak pairwise correlations imply strongly correlated network states in a neural population}},
@@ -91,7 +122,7 @@ booktitle = {Proceedings of the {\ldots}},
 year = {2009}
 }
 
-@article{Hyvärinen:2007ed,
+@article{Hyvarinen:2007ed,
 author = {Hyv{\"a}rinen, Aapo},
 title = {{Some extensions of score matching}},
 journal = {Computational Statistics {\&} Data Analysis},
